--- a/Codlang.html
+++ b/Codlang.html
@@ -56,7 +56,7 @@
 </head>
 <body>
     <div >
-        <h1>Codlang</h1>
+        <h1>arshad</h1>
         
         <button id="bt1">Convert code to normal language</button>
         
